comment goes here

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,14 @@
             <li>JILIU7@s.sfusd.edu</li>
         </ul>
         <div class="row mid">
-            <a href="https://popcode.org/?snapshot=5c45bb19-bcd1-420f-abdc-6b0dfc1b8f82">My work</a>
             <h1>Jinglan</h1>
             <img class="headshot" src="IMG-0268.JPG">
             <h1>Liu</h1>
         </div>
         <div class="row aboutme">
             <img src="https://images.unsplash.com/photo-1508768088800-43c68b8ea271?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5cccf2b79cfdd13095d24bf69c376cfb&auto=format&fit=crop&w=500&q=60">
-            <p> I am a high school student in San Francisco. I like to hang out and watch movies with my friends. </P>
+            <li> <a href="aboutMe.html">About Me</a></li>
+            <li><a href="https://popcode.org/?snapshot=5c45bb19-bcd1-420f-abdc-6b0dfc1b8f82">My work</a></li>
         </div>
         <div class="row contact">
                 <p><a href="https://github.com/JILIU7">JILIU7</a> to go to GitHub</P>
