center the aboutMe & myWork

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             <h1>Liu</h1>
         </div>
         <div class="row aboutme">
+            <li id="aboutMe"> <a href="aboutMe.html">About Me</a></li>
             <img src="https://images.unsplash.com/photo-1508768088800-43c68b8ea271?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5cccf2b79cfdd13095d24bf69c376cfb&auto=format&fit=crop&w=500&q=60">
-            <li> <a href="aboutMe.html">About Me</a></li>
-            <li><a href="https://popcode.org/?snapshot=5c45bb19-bcd1-420f-abdc-6b0dfc1b8f82">My work</a></li>
+            <li id="myWork"><a href="https://popcode.org/?snapshot=5c45bb19-bcd1-420f-abdc-6b0dfc1b8f82">My work</a></li>
         </div>
         <div class="row contact">
+                
                 <p><a href="https://github.com/JILIU7">JILIU7</a> to go to GitHub</P>
                 
         </div>
